--- a/_data/datapackage_additions.toml
+++ b/_data/datapackage_additions.toml
@@ -1029,17 +1029,22 @@ description = """Instructional dataset showing actual and predicted temperature 
 
 [[resources]] # Path: wheat.json
 path = "wheat.json"
-description = """In an 1822 letter to Parliament, [William Playfair](https://en.wikipedia.org/wiki/William_Playfair),
-a Scottish engineer who is often credited as the founder of statistical graphics, 
-published an elegant chart on the price of wheat. It plots 250 years of prices alongside 
-weekly wages and the reigning monarch. He intended to demonstrate that:
-> "never at any former period was wheat so cheap, in proportion to mechanical labour, \
-as it is at the present time."
+description = """As noted by in this protovis [example](https://mbostock.github.io/protovis/ex/wheat.html),
+"In an 1822 letter to Parliament, [William Playfair](https://en.wikipedia.org/wiki/William_Playfair), a Scottish engineer 
+who is often credited as the founder of statistical graphics, published an elegant chart 
+on the price of wheat. It plots 250 years of prices alongside weekly wages and the reigning monarch. 
+He intended to demonstrate that:
+> 'never at any former period was wheat so cheap, in proportion to mechanical labour, \
+as it is at the present time.'"
 """
 
 [[resources.sources]]
 title = "1822 Playfair Chart"
-path  = "http://dh101.humanities.ucla.edu/wp-content/uploads/2014/08/Vis_2.jpg"
+path  = "https://commons.wikimedia.org/wiki/File:Chart_Showing_at_One_View_the_Price_of_the_Quarter_of_Wheat,_and_Wages_of_Labour_by_the_Week,_from_1565_to_1821.png"
+
+[[resources.licenses]]
+title = "Public Domain"
+path  = "https://commons.wikimedia.org/wiki/Public_domain"
 
 [[resources]] # Path: windvectors.csv
 path        = "windvectors.csv"
